[gd_scene load_steps=21 format=2]

[ext_resource path="res://cenas/UIPlanodeFundo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Fontes/lady_radical/Lady Radical.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Imagens/Pergaminhos/PergaminhoMenu.png" type="Texture" id=3]
[ext_resource path="res://Imagens/Pergaminhos/PergaminhoTitle.png" type="Texture" id=4]
[ext_resource path="res://Imagens/Buttons/Configurações.png" type="Texture" id=5]
[ext_resource path="res://Imagens/Pergaminhos/PergaminhoConfigs.png" type="Texture" id=6]
[ext_resource path="res://scripts/UIConfiguracoes.gd" type="Script" id=7]
[ext_resource path="res://Fontes/sh-pinscher/SHPinscher-Regular.otf" type="DynamicFontData" id=8]
[ext_resource path="res://Imagens/Buttons/off.png" type="Texture" id=9]
[ext_resource path="res://Imagens/Buttons/on.png" type="Texture" id=10]
[ext_resource path="res://Sons/MusicaHub.mp3" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 53
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 32
outline_color = Color( 0.411765, 0.364706, 0.164706, 1 )
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxEmpty" id=9]

[node name="UIConfiguracoes" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = 6.0
margin_bottom = 3.0
script = ExtResource( 7 )

[node name="UIPlanodeFundo" parent="." instance=ExtResource( 1 )]
position = Vector2( -2, 0 )

[node name="PergaminhoAjsutes" type="Sprite" parent="."]
position = Vector2( 134.8, 62.9 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 4 )

[node name="LabelAjustes" type="Label" parent="PergaminhoAjsutes"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -357.667
margin_top = -119.667
margin_right = -176.667
margin_bottom = -48.6667
rect_pivot_offset = Vector2( 117, 335 )
custom_colors/font_color = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_fonts/font = SubResource( 1 )
text = "Ajustes"

[node name="ImgEngrenagem" type="Sprite" parent="PergaminhoAjsutes"]
position = Vector2( 73.6667, -31.5 )
scale = Vector2( 2.06897, 2.0115 )
texture = ExtResource( 5 )
centered = false

[node name="PergaminhoVoltar" type="Sprite" parent="."]
position = Vector2( 624.5, 401.25 )
scale = Vector2( 0.706058, 1.67592 )
texture = ExtResource( 3 )

[node name="ButtonVoltar" type="Button" parent="PergaminhoVoltar"]
margin_left = -150.838
margin_top = -15.0664
margin_right = 148.162
margin_bottom = 31.9336
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "V o l t a r"

[node name="BackgroundConfigs" type="Sprite" parent="."]
position = Vector2( 383, 230.063 )
scale = Vector2( 1.10108, 0.702839 )
texture = ExtResource( 6 )

[node name="CheckMusica" type="CheckButton" parent="BackgroundConfigs"]
margin_left = -173.0
margin_top = -80.0
margin_right = -10.0
margin_bottom = -23.0
custom_colors/font_color_disabled = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_focus = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_hover_pressed = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_fonts/font = SubResource( 8 )
custom_icons/off = ExtResource( 9 )
custom_icons/on_disabled = ExtResource( 10 )
custom_icons/on = ExtResource( 10 )
custom_icons/off_disabled = ExtResource( 9 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/hover_pressed = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
pressed = true
text = "Musica"

[node name="CheckSons" type="CheckButton" parent="BackgroundConfigs"]
margin_left = 45.0
margin_top = -78.4228
margin_right = 208.0
margin_bottom = -24.4228
custom_colors/font_color_disabled = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_focus = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_hover_pressed = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_fonts/font = SubResource( 8 )
custom_icons/off = ExtResource( 9 )
custom_icons/on_disabled = ExtResource( 10 )
custom_icons/on = ExtResource( 10 )
custom_icons/off_disabled = ExtResource( 9 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/hover_pressed = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
pressed = true
text = "Sons"

[node name="CheckTelaCheia" type="CheckButton" parent="BackgroundConfigs"]
margin_left = -174.826
margin_top = 36.8978
margin_right = -11.8262
margin_bottom = 100.898
custom_colors/font_color_disabled = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_focus = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_hover_pressed = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_hover = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_colors/font_color_pressed = Color( 0.411765, 0.364706, 0.164706, 1 )
custom_fonts/font = SubResource( 8 )
custom_icons/off = ExtResource( 9 )
custom_icons/on_disabled = ExtResource( 10 )
custom_icons/on = ExtResource( 10 )
custom_icons/off_disabled = ExtResource( 9 )
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/hover_pressed = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = "Tela Cheia"

[node name="AudioConfiguracoes" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -40.0

[connection signal="pressed" from="PergaminhoVoltar/ButtonVoltar" to="." method="_on_ButtonVoltar_pressed"]
[connection signal="toggled" from="BackgroundConfigs/CheckMusica" to="." method="_on_CheckMusica_toggled"]
[connection signal="toggled" from="BackgroundConfigs/CheckSons" to="." method="_on_CheckSons_toggled"]
[connection signal="toggled" from="BackgroundConfigs/CheckTelaCheia" to="." method="_on_CheckTelaCheia_toggled"]
